--- a/pepeizqs deals web/Pages/Shared/_Layout.cshtml
+++ b/pepeizqs deals web/Pages/Shared/_Layout.cshtml
@@ -182,6 +182,8 @@
     </header>
 
     <main role="main" class="cuerpo-ancho cuerpo-espacio">
+        @(await Html.RenderComponentAsync<Componentes.Admin.Tareas>(RenderMode.ServerPrerendered))
+
         @RenderBody()
     </main>
 
